# datalad

./: .all-contributorsrc  .appveyor.yml  .autorc  .codeclimate.yml  .codespell-ignorelines  .codespell-ignorewords  .codespellignorelines  .codespellrc  .coveragerc  .datalad-release-action.yaml  .gitattributes  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .travis.yml  .tributors  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  COPYING  Gruntfile.js  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.md  after2.txt  appveyor.yml  asv.conf.json  build.sh  datalad_0.14.6.orig.tar.gz.delta  datalad_0.14.6.orig.tar.gz.id  datalad_0.14.7.orig.tar.gz.delta  datalad_0.14.7.orig.tar.gz.id  (+69 more)
.datalad/: .gitattributes  config
.datalad/crawl/: crawl.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  issue_template.md
.github/ISSUE_TEMPLATE/: issue_template.yml  issue_template_bug.yml  issue_template_gooey.yml
.github/workflows/: add-changelog-snippet.yml  add-label.yml  benchmarks.yml  docbuild.yml  draft-pdf.yml  lint.yml  main.yml  release.yml  shellcheck.yml  test-label.yml  test-nose.yml  test.yml  test_crippled.yml  test_extensions.yml  test_macos.yml  test_win2019.yml  test_win2019_disabled  (+3 more)
__testhome__/: codecov.yml
_datalad_build_support/: __init__.py  formatters.py  setup.py
benchmarks/: api.py  benchmarks.py  cli.py  common.py  core.py  repo.py  save_run.py  usecases.py
cfgs/: allen-human.cfg  arjlover-fast.cfg  arjlover.cfg  common.cfg  example-feat.cfg  nih-videos.cfg  nihhelpers.py  openfmri-ds000001.cfg  openfmri.cfg
changelog.d/: +pytest-plugin.md  20221024_144940_m.szczepanik_nf_ghlike_description.md  20231025_194118_michael.hanke_bf_7507.md  20240416_194511_michael.hanke_remote_extension.md  20260305_150236_markiewicz_finally_return.md  20260312_142832_yaroslav_halchenko_explicit_output_deleted.md  20260314_094253_yaroslav_halchenko_suppress_requests_warning.md  20260316_111502_yaroslav_halchenko_contributing_overhaul.md  20260406_161516_yaroslav_halchenko_skip_openfiles_no_psutil.md  20260407_cfg_proc_install.md  20260407_run_merge_commits.md  20260421_073108_yaroslav_halchenko_altconstraints_or_mutation.md  20260421_073136_yaroslav_halchenko_push_skip_dryrun_special.md  20260421_073152_yaroslav_halchenko_cli_config_override_propagation.md  20260504_130540_yaroslav_halchenko_save_404_error.md  20260630_reset_command.md  20260701_091428_lgray95_bf_get_toppath_crash.md  adjusted_branch_reset.md  adjusted_merge_synced.md  adjusted_reset_synced.md  adjusted_update_target.md  pr-6784.md  pr-6839.md  pr-6861.md  pr-6904.md  pr-6931.md  pr-6932.md  pr-6936.md  pr-6952.md  pr-6977.md  pr-6997.md  pr-7001.md  pr-7002.md  pr-7009.md  pr-7011.md  pr-7014.md  pr-7017.md  pr-7024.md  pr-7027.md  pr-7028.md  (+229 more)
datagit/: __init__.py  api.py  cmd.py  config.py  db.py  files.py  log.py  main.py  network.py  repos.py  version.py
datalad/: __init__.py  __main__.py  _version.py  acmd.py  api.py  auto.py  cmd.py  cmd2.py  cmd_protocols.py  config.py  conftest.py  consts.py  coreapi.py  credman.py  db.py  dochelpers.py  install.py  log.py  main.py  network.py  nonasyncrunner.py  operations.py  operations_local.py  pytest_plugin.py  rdftest.py  repos.py  requirements.py  typing.py  utils.py  version.py
datalad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
datalad_build_support/: setup.py
debian/: NEWS  README.Debian  README.md  TODO  changelog  control  copyright  datalad.dirs  datalad.lintian-overrides  datalad.manpages  gbp.conf  lintian-overrides  pybuild.testfiles  rules  watch
docs/: Makefile  config-format.rst  datalad-metadata.rst  design.rst  run_tests.rst
figures/: datalad_process.svgtune
policy/: release_manager.md
sandbox/: git-annex-remote-gitobjects
testkraut/: __init__.py  config.py  lookup.py  pkg_mngr.py  spec.py  testcase.py  utils.py
tools/: Dockerfile.fullmaster  Singularity  Singularity-devmaster  Singularity.0.11.1  Singularity.0.11.5  Singularity.0.11.x  Singularity.fullmaster  Singularity.git-annex-dev  Singularity.maint  adhoc-httpd  bisect-git-annex  cast2asciinema  cast2narration  cast2rst  cast2script  cast_bash.rc  cast_ipython.rc  cast_live  cast_live_python  changelog-todo  checkpwd.py  cmdline-completion  convert-git-annex-layout  copy_urls_from_datalad.py  db_upgrade_0.0.2.py  describegitannex  downgrade-annex  dtime  eval_under_nfs  eval_under_testloopfs  find-hanged-tests  git-web-submodules.sh  injest-revolution  link_issues_CHANGELOG  make_demo_collection.sh  mimic_merges  mimic_repo  mkcontrib  monitor-interrupts.py  page2annex  (+9 more)
(+1221 files in other folders)
